# ipol-tools

./: README.md
denoise/bm3d/: CMakeLists.txt  test_dpkg_NEEDED_log.sh  utilities.cpp
denoise/bm3d/man/: bm3d.1
denoise/cartoontexture/: Makefile  main.cpp
denoise/cartoontexture/man/: cartoontexture.1
denoise/da3d/: CMakeLists.txt  DemoUtils.cpp  VERSION
denoise/da3d/man/: da3d.1
denoise/dctdenoising/: CHANGELOG  CMakeLists.txt  demoutils.cpp
denoise/dctdenoising/man/: dctdenoising.1
denoise/ksvd/: CMakeLists.txt  ksvd.cpp  lib_ormp.cpp  main.cpp  utilities.cpp
denoise/ksvd/man/: ksvd.1
denoise/nl-bayes/: CMakeLists.txt  README.txt  utils.cpp
denoise/nl-bayes/man/: nl-bayes.1
denoise/nlmeans/: CMakeLists.txt  nlmeans.cpp
denoise/nlmeans/man/: nlmeans.1
scale/tpi/: CMakeLists.txt
scale/tpi/man/: tpi_samplingdown.1  tpi_samplingup.1
scale/tpi/src/: main_downsampling.c  main_shift.c  main_transform.c  main_upsampling.c
